# Ymcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.trae/rules/: ymcp-workflow-rules.md
docs/: creative-studio-roadmap.md  current-workflow-flowcharts.md  host-implementation-guide.md  host-integration.md  install.md  release-checklist.md  tool-reference.md  trae-integration.md  trae-project-rule-template.md  workflow-contract.md
examples/: claude_desktop_config.example.json  host_call_all_tools.py  local_stdio_smoke.py  trae_mcp_config.example.json
skills/architect/: SKILL.md
skills/critic/: SKILL.md
skills/deep-interview/: SKILL.md
skills/imagegen/: SKILL.md
skills/plan/: SKILL.md
skills/planner/: SKILL.md
skills/ralph/: SKILL.md
skills/ralplan/: SKILL.md
skills/workflow-menu/: SKILL.md
src/ymcp/: __init__.py  capabilities.py  cli.py  complete_copy.py  fixtures.py  internal_registry.py  memory.py  server.py
tests/contracts/: test_packaging_metadata.py  test_tool_contracts.py  test_workflow_contracts.py
tests/docs/: test_docs.py
tests/integration/: test_mcp_app.py  test_v2f_web_app.py
tests/smoke/: test_cli.py  test_stdio_cli.py
tests/unit/: test_common_contracts.py  test_complete_copy.py  test_engines.py  test_imagegen_local_frame_workflow.py  test_memory.py  test_menu_webui.py  test_server_elicitation.py  test_v2f_path_safety.py  test_v2f_session.py  test_v2f_timing.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  (+3 more)
(+75 files in other folders)
