[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ymcp"
version = "0.2.2"
description = "Python MCP workflow tools for host-controlled planning workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ymcp contributors" }]
keywords = ["mcp", "workflow", "planning", "fastmcp", "trae"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.27,<2",
  "mempalace>=3.3.2,<4",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "tomli>=2,<3",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/ymcp/ymcp"
Documentation = "https://github.com/ymcp/ymcp#readme"
Issues = "https://github.com/ymcp/ymcp/issues"
Source = "https://github.com/ymcp/ymcp"

[project.scripts]
ymcp = "ymcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ymcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
